--- a/linkandimg/aj2.html
+++ b/linkandimg/aj2.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 	<h1>Air Jordan 2</h1>
+	<a href="linkandimg.html">
 	<img id="twm" src="https://stockx.imgix.net/Air-Jordan-2-Retro-Red-White-2014.jpg" alt="AirJordan2" >
+	</a>
 	<br/><br/>
 	<p> The success of the Air Jordan 1 encouraged Nike to release the New Air Jordan in 1986 for the new basketball season. Designed by Peter Moore and Bruce Kilgore, the original Air Jordan II was unique in that it was made in Italy. The Air Jordan 2 also retailed with a full length encapsulated Nike air bubble for maximum comfort.<br/>
 	 The Air Jordan 2 was the first Jordan not to have the Nike swoosh on the upper. The Air Jordan II was originally retailed at $100. The Air Jordan was originally released from 1986 to 1987. The model was revived from obscurity when Air Jordan collaborated with Just Don to create the Just Don x Air Jordan 2. The shoe featured premium blue quilted leather inspired by a Chanel handbag and released in very limited numbers on January 31, 2015 for $275. The shoe was released again in a Beach colourway bundled with a premium snapback and gold pin for $650 on January 30, 2016, later re-released in 1994, 2004–2005, 2008, 2010, 2014–2017. </p>
